--- a/Aula-10/index.html
+++ b/Aula-10/index.html
@@ -76,6 +76,26 @@
         default:
           console.log("Opção Inválida");
       }
+
+      //incremento de O a 10
+      for (i = 0; i <= 10; i++) {
+        // i++ (i= i+1)
+        console.log("Contagem " + i);
+        console.log(`Contagem: ${i}`); //TEMPLATE STRING
+      }
+
+      //Decremento de 20 a 10
+      for (i = 20; i > 10; i = i - 2) {
+        console.log(`Contagem: ${i}`); //TEMPLATE STRING
+      }
+
+      // While
+      let contador = 0;
+
+      while (contador < 5) {
+        console.log("Contador " + contador);
+        contador++;
+      }
     </script>
   </body>
 </html>
